# mlib

./: .clang-format  .gitignore  BUILD.bat  CMakeLists.txt  LICENSE  README.md  ReadMe.txt  build.proj  cpm.json  geo.vcxproj  geo.vcxproj.filters  geo_test.vcxproj  geo_test.vcxproj.filters  geom.vcxproj  geom.vcxproj.filters  geom_test.vcxproj  geom_test.vcxproj.filters  mklinks.bat  mlib.props  mlib.sln  mlib.sln.licenseheader  mlib.vcxproj  mlib.vcxproj.filters  mlib_test.vcxproj  mlib_test.vcxproj.filters  mlib_tests.xml  nmea.vcxproj  nmea.vcxproj.filters  readme.md  setup.bat  utpp.vcxproj  utpp.vcxproj.filters  utpp_test.vcxproj  utpp_test.vcxproj.filters
docs/: doxyfile  index.html  main.md
fab/: common_exe.props  common_lib.props
include/: .gitignore  nmea.h  nmeac.h  utf8  utils.h  utpp
samples/: .gitignore
source/: asset.cpp  base64.cpp  basename.cpp  bitstream.cpp  convert.cpp  crc32.c  dprintf.c  dprintf.cpp  errorcode.cpp  event.cpp  firewall.cpp  httpd.cpp  inaddr.cpp  jbridge.cpp  json.cpp  log.cpp  mutex.cpp  nmea.cpp  options.cpp  profile.cpp  rdir.cpp  semaphore.cpp  serenum1.cpp  serenum2.cpp  serenum3.cpp  shmem.cpp  sqlitepp.cpp  statpars.cpp  stopwatch.cpp  syncbase.cpp  tcpserv.cpp  thread.cpp  tvops.cpp  utf8.cpp  wsockstream.cpp  wtimer.cpp
src/: CMakeLists.txt  asset.cpp  base64.cpp  basename.cpp  biosuuid.cpp  bitstream.cpp  convert.cpp  crc32.c  crc32.cpp  dprintf.cpp  errorcode.cpp  event.cpp  firewall.cpp  hex.cpp  http.cpp  httpd.cpp  inaddr.cpp  jbridge.cpp  json.cpp  log.cpp  md5.c  md5.cpp  mlib.vcxproj  mlib.vcxproj.filters  (+22 more)
(+700 files in other folders)
